# GavelRS

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  count_lines.py  default.json  rustfmt.toml  struct.md  struct.out  task.json
.cargo/: config.toml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/cli/: daemon.rs  gpu.rs  mod.rs  queue.rs  submit.rs  task.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/gpu/: mod.rs  monitor.rs
core/src/rpc/: message.rs  mod.rs
core/src/utils/: logging.rs  mod.rs  models.rs
daemon/: Cargo.toml
daemon/src/: main.rs
daemon/src/daemon/: mod.rs  scheduler.rs  state.rs
daemon/src/daemon/handlers/: gpu_handler.rs  mod.rs  queue_handler.rs  submit_handler.rs  task_handler.rs
src/: lib.rs  main.rs
src/cli/: commands.rs  daemon.rs  gpu.rs  mod.rs  submit.rs
src/daemon/: mod.rs  scheduler.rs
src/gpu/: mod.rs  monitor.rs
tests/: integration.rs
