[package]
name = "gavelrs"
version = "0.1.0"
edition = "2021"
authors = ["Ice_Tea 13574662023@163.com"]
description = "GPU Task Scheduler for Deep Learning Workloads"

[dependencies]
anyhow = "1.0.97"
clap = "4.5.31"
nvml-wrapper = "0.10.0"
serde = "1.0.219"
sysinfo = "0.33.1"
thiserror = "2.0.12"
tokio = "1.44.0"
tui = "0.19.0"
libloading = "0.8"
