[package]
name = "gavelrs"
version = "0.1.0"
edition = "2021"
authors = ["Ice_Tea 13574662023@163.com"]
description = "GPU Task Scheduler for Deep Learning Workloads"

[dependencies]
anyhow = "1.0.97"
clap = "4.5.34"
nvml-wrapper = "0.10.0"
serde = "1.0.219"
sysinfo = "0.34.1"
thiserror = "2.0.12"
tokio = "1.44.1"
tui = "0.19.0"
libloading = "0.8.6"
log = "0.4.27"
fern = "0.7.1"
chrono = "0.4.40"
structopt = "0.3.26"
serde_json = "1.0.140"