# gavelrs/Cargo.toml (Workspace root)
[workspace]
members = ["core", "cli", "daemon"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["derive"] }
nvml-wrapper = "0.10.0"
tokio = { version = "1.44.1", features = ["full"] }
sysinfo = "0.34.1"
log = "0.4.27"
bincode = "2.0.1"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
