# gavelrs/cli/Cargo.toml
[package]
name = "gavel-cli"
version = "0.1.0"
edition = "2021"
authors = ["Ice_Tea <13574662023@163.com>"]
description = "CLI interface for GPU task scheduling"

[dependencies]
structopt = "0.3.26"
colored = "3.0.0" # Or latest version

# Workspace dependencies
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

# Local dependencies
gavel-core = { path = "../core" }