# gavelrs/daemon/Cargo.toml
[package]
name = "gavel-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Ice_Tea <13574662023@163.com>"]
description = "Background daemon for GPU task scheduling"

[dependencies]
tui = "0.19.0"
nix = { version = "0.30.1", features = ["signal"] } # 添加 nix 依赖
shlex = "1.3.0"

# Workspace dependencies
anyhow.workspace = true
sysinfo.workspace = true
tokio.workspace = true
log.workspace = true
serde_json.workspace = true
serde.workspace = true
bincode.workspace = true # 添加 bincode 依赖

# Local dependencies
gavel-core = { path = "../core" }

[dev-dependencies] # 添加开发依赖
tempfile = "3.10.1"